# r-d-careers-v2

./: LICENSE  README.md  database.py  main.py  pyproject.toml
templates/: app_form.html  app_form_submitted.html  banner.html  bootstrap.html  footer.html  home.css  home.html  jobitem.html  jobpage.html  navbar.html
