[tool.poetry]
name = "repl_nix_r-d-careers"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
file = ["requirements.txt"]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
